--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -7,10 +7,12 @@
     <string name="all_apps">所有应用</string>
     <string name="edit_apps">编辑</string>
     <string name="title_activity_app_list">应用列表</string>
+    <string name="second_fragment_label">Second Fragment</string>
     <string name="search_app">搜索应用</string>
     <string name="sidebar">侧边栏</string>
     <string name="sidebar_message">屏幕两侧边缘向屏幕内侧滑动启动侧边栏。在Android 11以下设备可能与返回手势冲突，请使用上下滑动手势或其他APP启动</string>
     <string name="sidebar_height">侧边栏高度</string>
+    <string name="first_fragment_label">First Fragment</string>
     <string name="freeform_width">小窗宽度</string>
     <string name="freeform_height">小窗高度</string>
     <string name="freeform_dpi">小窗分辨率</string>
@@ -20,9 +22,12 @@
     <string name="log">日志</string>
     <string name="show_ime_in_freeform">在小窗中展示输入法</string>
     <string name="show_ime_in_freeform_message">在小窗中展示输入法，仅支持Android 12+</string>
+    <string name="next">Next</string>
     <string name="notification_freeform">米窗</string>
     <string name="title_activity_freeform">启动小窗</string>
+    <string name="title_activity_test">TestActivity</string>
     <string name="take_over_notification">接管通知</string>
     <string name="take_over_notification_message">在通知中展示小窗按钮。仅支持Android 12+。警告：使用推送服务的通知无法正确跳转，比如MIUI</string>
     <string name="please_install_mi_freeform_sidebar_app">请安装米窗-侧边栏软件</string>
+    <string name="previous">Previous</string>
 </resources>
